--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ button {
     background: #5f9341;
     color: white;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid #5f9341;
     font-weight: bold;
 }
 
@@ -33,4 +33,8 @@ li {
 
 a {
     color: #5f9341;
+}
+#delete-btn{
+    background: white;
+    color:#5f9341;
 }
